Added another non-defective class for bubbles
All codes changed to incorporate modifications because of the addition of a 4th class. 
"1. Resize images.ipynb" has been made more dynamic - it now takes a folder as input and figures out the sub-folders within

--- a/Pre-processing/2. Rename images.ipynb
+++ b/Pre-processing/2. Rename images.ipynb
@@ -31,8 +31,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:40:26.525083Z",
-     "start_time": "2019-05-14T04:40:25.454661Z"
+     "end_time": "2019-05-16T05:54:53.142047Z",
+     "start_time": "2019-05-16T05:54:52.255950Z"
     }
    },
    "outputs": [],
@@ -47,8 +47,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:40:26.557370Z",
-     "start_time": "2019-05-14T04:40:26.552654Z"
+     "end_time": "2019-05-16T05:54:53.174945Z",
+     "start_time": "2019-05-16T05:54:53.169476Z"
     }
    },
    "outputs": [],
@@ -59,34 +59,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:41:01.961499Z",
-     "start_time": "2019-05-14T04:41:01.955447Z"
+     "end_time": "2019-05-16T05:57:15.837475Z",
+     "start_time": "2019-05-16T05:57:15.808567Z"
     }
    },
    "outputs": [],
    "source": [
     "EXTENSION_IMAGES = \".JPG\"\n",
+    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/2. Renamed Images'\n",
+    "PATH_MAPPING_FILES = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/Mapping Files'\n",
     "\n",
     "# Provide list of locations for which the fix needs to be applied - Each item in the list is a 3 item tuple containing a path, a prefix for each file names, and the location of the output text file\n",
     "LIST_CONFIG = [\n",
-    "    ('/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/2. Renamed images/defective_lav',\n",
+    "    (os.path.join(PATH_INPUT,'defective_lav'),\n",
     "     'def_lav_',\n",
-    "     '/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/Mapping Files/mapping_filenames_def_lav.csv'\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_def_lav.csv')\n",
     "     ),\n",
-    "    ('/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/2. Renamed images/defective_ldl',\n",
+    "    (os.path.join(PATH_INPUT,'defective_ldl'),\n",
     "     'def_ldl_',\n",
-    "     '/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/Mapping Files/mapping_filenames_def_ldl.csv'\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_def_ldl.csv')\n",
     "     ),\n",
-    "    ('/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/2. Renamed images/non_defective_lav',\n",
-    "     'nondef_lav_',\n",
-    "     '/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/Mapping Files/mapping_filenames_nondef_lav.csv'\n",
+    "    (os.path.join(PATH_INPUT,'non_defective'),\n",
+    "     'nondef_',\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_nondef.csv')\n",
     "     ),\n",
-    "    ('/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/2. Renamed images/non_defective_ldl',\n",
-    "     'nondef_ldl_',\n",
-    "     '/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/Mapping Files/mapping_filenames_nondef_ldl.csv'\n",
+    "    (os.path.join(PATH_INPUT,'non_defective_bubbles'),\n",
+    "     'nondef_bubbles_',\n",
+    "     os.path.join(PATH_MAPPING_FILES,'mapping_filenames_nondef_bubbles.csv')\n",
     "     )\n",
     "]"
    ]
@@ -100,11 +102,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:41:03.608596Z",
-     "start_time": "2019-05-14T04:41:03.599120Z"
+     "end_time": "2019-05-16T05:57:16.546542Z",
+     "start_time": "2019-05-16T05:57:16.530252Z"
     },
     "code_folding": [
      0
@@ -141,11 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:41:03.824471Z",
-     "start_time": "2019-05-14T04:41:03.820104Z"
+     "end_time": "2019-05-16T05:57:16.810794Z",
+     "start_time": "2019-05-16T05:57:16.803649Z"
     }
    },
    "outputs": [],
@@ -156,11 +158,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:41:05.173337Z",
-     "start_time": "2019-05-14T04:41:05.061600Z"
+     "end_time": "2019-05-16T05:57:17.967213Z",
+     "start_time": "2019-05-16T05:57:17.858708Z"
     }
    },
    "outputs": [],
