--- a/Pre-processing/3. train_test_split.ipynb
+++ b/Pre-processing/3. train_test_split.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:41:46.751407Z",
-     "start_time": "2019-05-14T04:41:45.173924Z"
+     "end_time": "2019-05-16T05:58:23.346027Z",
+     "start_time": "2019-05-16T05:58:23.337888Z"
     }
    },
    "outputs": [],
@@ -62,12 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:41:46.798432Z",
-     "start_time": "2019-05-14T04:41:46.788855Z"
-    }
+     "end_time": "2019-05-16T05:58:23.778003Z",
+     "start_time": "2019-05-16T05:58:23.761308Z"
+    },
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
@@ -100,12 +103,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:41:47.191492Z",
-     "start_time": "2019-05-14T04:41:47.166837Z"
-    }
+     "end_time": "2019-05-16T05:58:24.411713Z",
+     "start_time": "2019-05-16T05:58:24.364511Z"
+    },
+    "code_folding": [
+     0
+    ]
    },
    "outputs": [],
    "source": [
@@ -220,27 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:43:54.347508Z",
-     "start_time": "2019-05-14T04:43:54.343298Z"
+     "end_time": "2019-05-16T05:58:51.108376Z",
+     "start_time": "2019-05-16T05:58:51.103737Z"
     }
    },
    "outputs": [],
    "source": [
-    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/2. Renamed images'\n",
-    "PATH_OUTPUT_TRAIN = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/3. Train Test split/train'\n",
-    "PATH_OUTPUT_TEST = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Large/3. Train Test split/test'"
+    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/2. Renamed Images'\n",
+    "PATH_OUTPUT_TRAIN = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/3. Train Test Split/train'\n",
+    "PATH_OUTPUT_TEST = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/3. Train Test Split/test'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-14T04:43:32.334853Z",
-     "start_time": "2019-05-14T04:43:32.002351Z"
+     "end_time": "2019-05-16T05:58:52.223496Z",
+     "start_time": "2019-05-16T05:58:51.881406Z"
     }
    },
    "outputs": [
@@ -248,8 +254,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Small/3. Train Test split/train\n",
-      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/Small/3. Train Test split/test\n"
+      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/3. Train Test Split/train\n",
+      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/3. Train Test Split/test\n"
      ]
     },
     {
@@ -269,15 +275,17 @@
       "Summary\n",
       "------\n",
       "\n",
-      "Total number of samples:151. \n",
+      "Total number of samples:127. \n",
       "Volumes across categories:\n",
-      " type   class        \n",
-      "test   defective_lav     4\n",
-      "       defective_ldl     5\n",
-      "       non_defective    22\n",
-      "train  defective_lav    17\n",
-      "       defective_ldl    17\n",
-      "       non_defective    86\n",
+      " type   class                \n",
+      "test   defective_lav             3\n",
+      "       defective_ldl             4\n",
+      "       non_defective            11\n",
+      "       non_defective_bubbles     8\n",
+      "train  defective_lav            13\n",
+      "       defective_ldl            14\n",
+      "       non_defective            45\n",
+      "       non_defective_bubbles    29\n",
       "dtype: int64\n"
      ]
     }
