Model files for project report updated

--- a/Pre-processing/3. train_test_split.ipynb
+++ b/Pre-processing/3. train_test_split.ipynb
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:58:23.346027Z",
-     "start_time": "2019-05-16T05:58:23.337888Z"
+     "end_time": "2019-05-23T02:27:58.218154Z",
+     "start_time": "2019-05-23T02:27:55.466673Z"
     }
    },
    "outputs": [],
@@ -62,11 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:58:23.778003Z",
-     "start_time": "2019-05-16T05:58:23.761308Z"
+     "end_time": "2019-05-23T02:27:58.274362Z",
+     "start_time": "2019-05-23T02:27:58.256787Z"
     },
     "code_folding": [
      0
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:58:24.411713Z",
-     "start_time": "2019-05-16T05:58:24.364511Z"
+     "end_time": "2019-05-23T02:27:58.347696Z",
+     "start_time": "2019-05-23T02:27:58.304912Z"
     },
     "code_folding": [
      0
@@ -226,27 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:58:51.108376Z",
-     "start_time": "2019-05-16T05:58:51.103737Z"
+     "end_time": "2019-05-23T02:28:40.486909Z",
+     "start_time": "2019-05-23T02:28:40.472299Z"
     }
    },
    "outputs": [],
    "source": [
-    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/2. Renamed Images'\n",
-    "PATH_OUTPUT_TRAIN = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/3. Train Test Split/train'\n",
-    "PATH_OUTPUT_TEST = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/3. Train Test Split/test'"
+    "PATH_INPUT = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/2. Renamed Images'\n",
+    "PATH_OUTPUT_TRAIN = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/3. Train Test Split/train'\n",
+    "PATH_OUTPUT_TEST = r'/Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/3. Train Test Split/test'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-05-16T05:58:52.223496Z",
-     "start_time": "2019-05-16T05:58:51.881406Z"
+     "end_time": "2019-05-23T02:28:48.053708Z",
+     "start_time": "2019-05-23T02:28:47.598545Z"
     }
    },
    "outputs": [
@@ -254,8 +254,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/3. Train Test Split/train\n",
-      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V2/Small/3. Train Test Split/test\n"
+      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/3. Train Test Split/train\n",
+      "Path created: /Users/shyamravikumar/Documents/Workspace/BAI - Project/Input Files/V3/Small - 60_40 split/3. Train Test Split/test\n"
      ]
     },
     {
@@ -278,14 +278,14 @@
       "Total number of samples:127. \n",
       "Volumes across categories:\n",
       " type   class                \n",
-      "test   defective_lav             3\n",
-      "       defective_ldl             4\n",
-      "       non_defective            11\n",
-      "       non_defective_bubbles     8\n",
-      "train  defective_lav            13\n",
-      "       defective_ldl            14\n",
-      "       non_defective            45\n",
-      "       non_defective_bubbles    29\n",
+      "test   defective_lav             6\n",
+      "       defective_ldl             7\n",
+      "       non_defective            23\n",
+      "       non_defective_bubbles    15\n",
+      "train  defective_lav            10\n",
+      "       defective_ldl            11\n",
+      "       non_defective            33\n",
+      "       non_defective_bubbles    22\n",
       "dtype: int64\n"
      ]
     }
@@ -296,10 +296,17 @@
     "    path_output_train=PATH_OUTPUT_TRAIN,\n",
     "    path_output_test=PATH_OUTPUT_TEST,\n",
     "    stratify=True,\n",
-    "    train_size=0.8,\n",
+    "    train_size=0.6,\n",
     "    random_state=12334  \n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
